--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <center>
+    <center><br><br>
+        <img src="./img/bday.png" class='hbday'>
         <div class="text">
             <br><br><br>
             <a>Happy birthday my dearest and sweetest, not a day goes by when I do not think of you and how empty my life would be if you were not here. I wish I could attach my heart to this Birthday wish. That's how much you mean to me. I wish you always be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. I Love You So So So Much💖💖 Will You be my GirlFriend? I will always keep you happy💖💖</a>
