--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="./img/bday.png" class='hbday'>
         <div class="text">
             <br><br><br>
-            <a>Happy birthday my dearest and sweetest, not a day goes by when I do not think of you and how empty my life would be if you were not here. I wish I could attach my heart to this Birthday wish. That's how much you mean to me. I wish you always be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. I Love You So So So Much💖💖 Will You be my GirlFriend? I will always keep you happy💖💖</a>
+            <a>Happy birthday my dearest and sweetest, not a day goes by when I do not think of you and how empty my life would be if you were not here. I wish I could attach my heart to this Birthday wish. That's how much you mean to me. I wish you always be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. I Love You So So So Much💖💖 I always keep you happy, You always talk to me. Whenever your mood if off I make you happy. You enjoy talking to me so I just wanted to ask <b>Will You be my GirlFriend?</b> I will always keep you happy💖💖</a>
         </div><br><br><br>
 
         <video class="potrate" controls>
