--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div class="text">
             <br><br><br>
             <a>Happy birthday my dearest and sweetest, not a day goes by when I do not think of you and how empty my life would be if you were not here. I wish I could attach my heart to this Birthday wish. That's how much you mean to me. I wish you always
-                be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. I Love You So So So Much💖💖 I always keep you happy, I always talk to you.
-                Whenever your mood is off I make you happy, you enjoy talking to me, and obesely we have habit of each other so I just wanted to ask that<b> can I remove 1 "F" from our BFF relationship and make me your "BF"?</b> I will always keep you happy💖💖</a>
+                be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. Always be happy and take care. I am always their for you</a>
         </div><br><br><br>
 
         <video class="potrate" controls>
