--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <img src="./img/bday.png" class='hbday'>
         <div class="text">
             <br><br><br>
-            <a>Happy Birthday to a special person who is bringing so much joy to my heart. I am thankful for every moment we spend together, and I wish our happiness never ends. I love you soo much💖. I love you from the bottom of my heart. I always want to be with you, in every part of your life, in every step of your life. And you know that you have stolen my heart. One empty place is their where one heart could fit, what will you do of two hearts give my your heart I will keep it safe. I Love you💖. Will You become my Girlfriend? I will accept all the conditions promise.</a>
+            <a>Happy birthday my dearest and sweetest, not a day goes by when I do not think of you and how empty my life would be if you were not here. I wish I could attach my heart to this Birthday wish. That's how much you mean to me. I wish you always be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. I Love You So So So Much💖💖 I always keep you happy, I always talk to you.
+                Whenever your mood is off I make you happy, you enjoy talking to me, and obesely we have habit of each other so I just wanted to ask that<b> can I remove 1 "F" from our BFF relationship and make me your "BF"?</b> I will always keep you happy💖💖</a>
         </div><br><br><br>
 
         <video class="potrate" controls>
