--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <center><br><br>
-        <img src="./img/bday.png" class='hbday'>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/bday.png" class='hbday'>
         <div class="text">
             <br><br><br>
             <a>Happy birthday my dearest and sweetest, not a day goes by when I do not think of you and how empty my life would be if you were not here. I wish I could attach my heart to this Birthday wish. That's how much you mean to me. I wish you always be happy and I'll do everything to make you so💖💖. You are the best person I have ever seen. I promise you that I will be with you at every step of your life. I Love You So So So Much💖💖 I always keep you happy, I always talk to you.
@@ -19,93 +19,93 @@
         </div><br><br><br>
 
         <video class="potrate" controls>
-        <source src="./img/temp/229771025_257730395864052_7510227888844702635_n.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/229771025_257730395864052_7510227888844702635_n.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/235486545_4372480176205958_4424162555385556669_n.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/235486545_4372480176205958_4424162555385556669_n.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/239602771_681088046621611_2158805243715722632_n.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/239602771_681088046621611_2158805243715722632_n.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/song_reel.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/song_reel.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/VID_20860930_140213_437.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/VID_20860930_140213_437.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/VID_22271208_142034_238.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/VID_22271208_142034_238.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/VID_23441128_171613_610.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/VID_23441128_171613_610.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/VID_23450126_154823_348.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/VID_23450126_154823_348.mp4" type="video/mp4">
     </video>
         <video class="potrate" controls>
-        <source src="./img/temp/VID_23450326_002608_294.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/VID_23450326_002608_294.mp4" type="video/mp4">
       </video>
         <br>
         <video class="landscp" controls>
-        <source src="./img/temp/untitled.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/untitled.mp4" type="video/mp4">
     </video>
         <video class="landscp" controls>
-        <source src="./img/temp/untitled_1629540388829.mp4" type="video/mp4">
+        <source src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/untitled_1629540388829.mp4" type="video/mp4">
     </video>
         <br><br><br>
 
-        <img src="./img/temp/IMG_20210807_223508.jpg"></img>
-        <img src="./img/temp/IMG_20210812_193938_049.jpg"></img>
-        <img src="./img/temp/IMG_20210813_193523_612.jpg"></img>
-        <img src="./img/temp/IMG_20210817_190121_021.jpg"></img>
-        <img src="./img/temp/IMG_20210818_173819.jpg"></img>
-        <img src="./img/temp/IMG_20210818_181339.jpg"></img>
-        <img src="./img/temp/IMG_20210818_181758.jpg"></img>
-        <img src="./img/temp/IMG_20210820_193436.jpg"></img>
-        <img src="./img/temp/IMG_20210820_193446.jpg"></img>
-        <img src="./img/temp/IMG_20210823_093952.jpg"></img>
-        <img src="./img/temp/IMG_20210823_094233.jpg"></img>
-        <img src="./img/temp/IMG_20210823_095118.jpg"></img>
-        <img src="./img/temp/IMG_20210823_095146.jpg"></img>
-        <img src="./img/temp/IMG_20210823_095245.jpg"></img>
-        <img src="./img/temp/IMG_20210825_152446.jpg"></img>
-        <img src="./img/temp/IMG_20210827_161857.jpg"></img>
-        <img src="./img/temp/IMG_20210830_133142.jpg"></img>
-        <img src="./img/temp/IMG_20210830_133530.jpg"></img>
-        <img src="./img/temp/IMG_20210830_160519.jpg"></img>
-        <img src="./img/temp/IMG_20210830_160530.jpg"></img>
-        <img src="./img/temp/IMG_20210830_160603.jpg"></img>
-        <img src="./img/temp/IMG_20210830_161152.jpg"></img>
-        <img src="./img/temp/IMG_20210901_125154.jpg"></img>
-        <img src="./img/temp/IMG_20210902_161711.jpg"></img>
-        <img src="./img/temp/IMG_20210903_144654.jpg"></img>
-        <img src="./img/temp/IMG_20210903_154936.jpg"></img>
-        <img src="./img/temp/IMG_20210904_161430.jpg"></img>
-        <img src="./img/temp/IMG_20210905_113747.jpg"></img>
-        <img src="./img/temp/IMG_20210906_094207.jpg"></img>
-        <img src="./img/temp/IMG_20210906_094718.jpg"></img>
-        <img src="./img/temp/IMG_20210906_163737.jpg"></img>
-        <img src="./img/temp/IMG_20210908_093209.jpg"></img>
-        <img src="./img/temp/IMG_20210908_094148.jpg"></img>
-        <img src="./img/temp/IMG_20210908_094848.jpg"></img>
-        <img src="./img/temp/IMG_20210908_094921.jpg"></img>
-        <img src="./img/temp/IMG_20210908_172546.jpg"></img>
-        <img src="./img/temp/IMG_20210909_120006.jpg"></img>
-        <img src="./img/temp/IMG_20210911_102618.jpg"></img>
-        <img src="./img/temp/IMG_20210911_174421.jpg"></img>
-        <img src="./img/temp/IMG_20210913_132027_497.jpg"></img>
-        <img src="./img/temp/IMG_20210913_132153.jpg"></img>
-        <img src="./img/temp/Snapchat-105858876.jpg"></img>
-        <img src="./img/temp/Snapchat-1254964513.jpg"></img>
-        <img src="./img/temp/Snapchat-1378229065.jpg"></img>
-        <img src="./img/temp/Snapchat-1777169944.jpg"></img>
-        <img src="./img/temp/Snapchat-1840404447.jpg"></img>
-        <img src="./img/temp/Snapchat-1904829889.jpg"></img>
-        <img src="./img/temp/Snapchat-1969463197.jpg"></img>
-        <img src="./img/temp/Snapchat-1976875447.jpg"></img>
-        <img src="./img/temp/Snapchat-399508501.jpg"></img>
-        <img src="./img/temp/Snapchat-662819233.jpg"></img>
-        <img src="./img/temp/Snapchat-973648453.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210807_223508.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210812_193938_049.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210813_193523_612.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210817_190121_021.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210818_173819.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210818_181339.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210818_181758.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210820_193436.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210820_193446.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210823_093952.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210823_094233.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210823_095118.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210823_095146.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210823_095245.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210825_152446.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210827_161857.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210830_133142.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210830_133530.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210830_160519.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210830_160530.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210830_160603.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210830_161152.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210901_125154.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210902_161711.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210903_144654.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210903_154936.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210904_161430.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210905_113747.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210906_094207.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210906_094718.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210906_163737.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210908_093209.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210908_094148.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210908_094848.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210908_094921.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210908_172546.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210909_120006.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210911_102618.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210911_174421.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210913_132027_497.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/IMG_20210913_132153.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-105858876.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1254964513.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1378229065.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1777169944.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1840404447.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1904829889.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1969463197.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-1976875447.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-399508501.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-662819233.jpg"></img>
+        <img src="https://bigbeastishank.github.io/happy-bday-soni-old/img/temp/Snapchat-973648453.jpg"></img>
 
     </center>
 </body>
